--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test_heroku_gol",
+  "name": "newprojectparis",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,9 +9,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hanumanum/test-heroku-gol.git"
+    "url": "git+https://github.com/parisbaghdasaryan/programing3.git"
   },
-  "author": "hanuman",
+  "author": "parisbaghdasaryan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/hanumanum/test-heroku-gol/issues"
